--- a/public_html/photos.html
+++ b/public_html/photos.html
@@ -22,6 +22,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div><a href="photos.html">Slideshow Page</a></div>
+        <div>TODO practice slideshow options</div>
     </body>
 </html>
