Initializing project for testing.

--- a/public_html/photos.html
+++ b/public_html/photos.html
@@ -18,10 +18,27 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <html>
     <head>
         <title>Crystal Clarification</title>
+        <link rel="stylesheet" type="text/css" href="slideshow.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO practice slideshow options</div>
+
+        <div class="container">
+            <header>
+                <label for="slideTrigger1">One</label>
+                <label for="slideTrigger2">Two</label>
+                <label for="slideTrigger3">Three</label>
+            </header>
+            <input id="slideTrigger1" type="radio" name="slides" checked>
+            <div class="slide slide00101">
+            </div>
+            <input id="slideTrigger2" type="radio" name="slides">
+            <div class="slide slide00102">
+            </div>
+            <input id="slideTrigger3" type="radio" name="slides">
+            <div class="slide slide00103">
+            </div>
+        </div>
     </body>
 </html>
